# sik-radio

./: CMakeLists.txt  Makefile
src/: receiver.cpp  sender.cpp
src/common/: exceptions.hpp  socket_utils.hpp  types.hpp
src/receiver/: audio_buffer.hpp  receiver.hpp  server_socket.hpp
src/sender/: client_socket.hpp  sender.hpp
